# daph_exfusion

./: LICENSE  PATCH_NOTES.md  README.md  pyproject.toml  run_integration_pipeline.py  run_mamba_130m_exfusion.py
daph_exfusion/: __init__.py  adaptive_top_p_router.py  benchmark.py  bridge.py  demo.py  merge_toolkit.py  mlx_inference.py  orchestrator.py  upgrade_utils.py
docs/: CORRECTED_ENGINEERING_ROADMAP.md  THERMODYNAMIC_ROUTER_DECISION.md
experiments/: thermodynamic_router_ablation.py
tests/: test_adaptive_router.py  test_benchmark.py  test_bridge.py  test_import.py  test_merge_toolkit.py  test_mlx_adaptive_router.py  test_router_enhancements.py  test_safety_gates.py  test_thermodynamic_router_ablation.py  test_upgrade_utils.py  test_v460_fixes.py  test_v470_fixes.py  test_v480_fixes.py
